# ntr-viewer

./: .eslintrc.cjs  .gitignore  AGENTS.md  InterfaceNeutral_e_01.01.md  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/sessions/2025/10/21/: rollout-2025-10-21T15-40-58-019a0700-6659-7f82-9c89-18fcd6222ffd.jsonl
.github/workflows/: ci.yml
app/: index.html  main.ts  tsconfig.json
app/geo/: builders.ts
app/ntr/: model.ts  parser.ts  result.ts
app/render/: viewer.ts
app/ui/: app-bootstrap.ts  styles.css
data/: Example.ntr  InterfaceNeutral_e_01.01.md  arcRotateCamera.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: main.ts  styles.css  telemetry.ts
src/app/api/: files.ts
src/ntr/: lexer.ts  model.ts  parser.ts  types.ts  validation.ts
src/shared/: iter.ts  logging.ts  result.ts  toast.ts
src/viewer/: RevitStylePointerInput.ts  engine.ts  sceneGraph.ts  viewer.ts
src/viewer/camera/: PivotOrbitCamera.ts
src/viewer/renderers/: highTessellation.ts  impostorRenderer.ts  index.ts
tests/app/: files.spec.ts
tests/ntr/: example.spec.ts  lexer.spec.ts  parser.spec.ts  validation.spec.ts
tests/shared/: iter.spec.ts  result.spec.ts
tests/viewer/: sceneGraph.spec.ts
